# sQlib

./: .gitignore  AGENTS.md  pyproject.toml  qlib_workflow.ipynb  sqlib_workflow.ipynb
cn_data/: README.md
config/: config.py
data/: README.md  data.py  factor.py  handler.py  update.py
docs/superpowers/plans/: 2026-04-06-tushare-daily-pv.md
docs/superpowers/specs/: 2026-04-06-tushare-daily-pv-design.md  2026-04-07-codex-session-persistence-design.md
instruments/: README.md  all.txt  csi1000.txt  csi300.txt  csi500.txt  csi800.txt  csiall.txt
model/: gbdt.py
sqlib/: __init__.py  cli.py  config.py
sqlib/data_sources/tushare/: client.py
sqlib/services/: daily_sync.py
sqlib/storage/: parquet_daily.py
tests/: conftest.py  test_cli.py  test_codex_session_state.py  test_config.py  test_daily_sync.py  test_parquet_daily_store.py  test_tushare_client.py
tools/codex_session/: __init__.py  state.py
utils/: paral.py  time.py
