[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlib"
version = "0.1.0"
description = "Lightweight quant research library with Tushare daily data ingestion"
requires-python = ">=3.8,<3.9"
dependencies = [
  "pandas>=2.0,<2.1",
  "pyarrow>=17.0.0",
  "tushare>=1.4.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
sqlib = "sqlib.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
